# madmail

./: .dockerignore  .env.example  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yaml  .mkdocs.yml  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  RELEASES.md  SECURITY.md  build.sh  config.go  docker-compose.yml  go.mod  go.sum  invitation.md  maddy.conf  maddy.conf.docker  maddy.go  package-lock.json  package.json  performance-analysis.md  pyproject.toml  signal.go  signal_nonposix.go  systemd.go  tools.go
crates/chatmail-acme/: Cargo.toml
crates/chatmail-acme/src/: acme_common.rs  http01.rs  lib.rs  obtain.rs  obtain_ip.rs  self_signed.rs
crates/chatmail-admin-web/: .gitignore  Cargo.toml  build.rs
crates/chatmail-admin-web/src/: assets.rs  lib.rs  patch.rs  serve.rs
crates/chatmail-auth/: Cargo.toml
crates/chatmail-auth/src/: hash.rs  jit.rs  lib.rs  normalize.rs  validate.rs
crates/chatmail-db/: Cargo.toml
crates/chatmail-db/migrations/postgres/: 20240101000000_init.sql  20240201000000_federation_stats.sql  20240301000000_passwords.sql  20240401000000_madmail_compat.sql  20240501000000_federation_silent_dismiss.sql
crates/chatmail-db/migrations/sqlite/: 20240301000000_passwords.sql  20240401000000_madmail_compat.sql  20240501000000_federation_silent_dismiss.sql
crates/chatmail-db/src/: account_info.rs  blocklist.rs  endpoint_cache.rs  federation_policy.rs  inbound.rs  lib.rs  mail_ports.rs  maintenance.rs  message_retention.rs  message_stats.rs  models.rs  passwords.rs  pool.rs  quota_defaults.rs  registration_tokens.rs  schema.rs  settings.rs  settings_keys.rs  sharing.rs
crates/chatmail-delivery/: Cargo.toml
crates/chatmail-delivery/src/: federation_http.rs  federation_smtp.rs  lib.rs  router.rs  transport.rs
crates/chatmail-delivery/src/queue/: config.rs  mod.rs  store.rs  tests.rs  worker.rs
crates/chatmail-fed/: Cargo.toml
crates/chatmail-fed/src/: lib.rs  mxdeliv.rs  security.rs  server.rs
crates/chatmail-iroh/: Cargo.toml  build.rs
crates/chatmail-iroh/assets/: .gitignore
crates/chatmail-iroh/src/: discovery.rs  lib.rs  runner.rs
crates/chatmail-metrics/: Cargo.toml
crates/chatmail-metrics/src/: lib.rs  metrics.rs  server.rs
crates/chatmail-metrics/tests/: http_integration.rs
crates/chatmail-shadowsocks/: Cargo.toml
crates/chatmail-shadowsocks/src/: allowed_ports.rs  cipher.rs  lib.rs  runtime.rs  server.rs  urls.rs  xray.rs
crates/chatmail-smtp/: Cargo.toml
crates/chatmail-smtp/src/: data_limit.rs  lib.rs  protocol.rs  server.rs  session.rs
crates/chatmail-state/: Cargo.toml
crates/chatmail-state/src/: auth.rs  events.rs  flusher.rs  lib.rs  listener_ports.rs  message_size.rs  policy.rs  quota.rs  reload.rs  silent_dismiss.rs  tracker.rs
crates/chatmail-turn/: Cargo.toml
crates/chatmail-turn/src/: allocate_client.rs  credentials.rs  lib.rs  parse.rs  runner.rs  turn_client.rs
crates/chatmail-turn/tests/: dual_allocate.rs  realm_auth.rs  relay_external_ip.rs  relay_only_test.rs  remote_live.rs  rfc8656_relay_datapath.rs  smoke_allocate.rs  smoke_stun.rs
crates/chatmail-webhooks/: Cargo.toml
crates/chatmail-webhooks/src/: dispatcher.rs  lib.rs  settings.rs
crates/chatmail-www/: Cargo.toml  build.rs
crates/chatmail-www/src/: assets.rs  contact_sharing.rs  context_cache.rs  cors.rs  export.rs  gate.rs  go_template.rs  handlers.rs  lib.rs  response.rs  router.rs  template.rs  tests.rs  webimap.rs  webimap_ws.rs  www_facts.rs  www_migrate.rs
crates/chatmail-www/www-src/: admin_api_docs.html  admin_docs.html  api_data.js  app.css  app.html  app.js  app_db.js  app_log.js  app_transport.js  contact_share.html  contact_share_success.html  contact_view.html  database_docs.html  deploy.html  devserver.go  docker_docs.html  docs_index.html  docs_serve.html  general_docs.html  index.html  info.html  invite.html  main.css  main.js  qrcode.min.js  relay_docs.html  security.html  translations.js
crates/madmail-tray/: Cargo.toml
crates/madmail-tray/src/: main.rs  ops.rs  paths.rs  tray_win.rs
tests/: Cargo.toml  basic_test.go  cover_test.go  ctl_cli_e2e.rs  ctl_ops_e2e.rs  deltachat-test-deploy.py  deltachat-test-incus.sh  deltachat_p2p_e2e.rs  docker-deploy-script.sh  dovecot_sasl_test.go  dovecot_sasld_test.go  imap_connection_lifecycle_test.go  imap_e2e.rs  imap_test.go  imapsql_test.go  incus-deploy-script.sh  inmemory_test.go  issue327_test.go  lib.rs  limits_test.go  lmtp_test.go  memory_idle_test.go  memory_imap_test.go  memory_login_test.go  memstore_test.go  mta_test.go  multiple_domains_test.go  openmetrics_e2e.rs  pyproject.toml  registration_test.go  relay-ping-2x1k.sh  replace_addr_test.go  securejoin_e2e.rs  smtp_autobuffer_test.go  smtp_test.go  stress_test.go  t.go  turn_e2e.rs
tests/deltachat-test/: cmping.py  compare_pgp.py  compare_stress.py  main.py  setup_lxc_unprivileged.sh  stress.py  test_exchanger_prod.py
tests/deltachat-test/mail-data/: encrypted.eml
tests/deltachat-test/scenarios/: __init__.py  test_01_account_creation.py  test_02_unencrypted_rejection.py  test_03_secure_join.py  test_05_group_message.py  test_06_file_transfer.py  test_07_federation.py  test_08_no_logging.py  test_09_send_bigfile.py  test_10_upgrade_mechanism.py  test_11_jit_registration.py  test_12_cmping_functional.py  test_12_smtp_imap_idle.py  test_13_concurrent_profiles.py  test_13_multirecipient.py  test_14_idle_notification.py  test_14_purge_messages.py  test_15_cmping.py  test_15_deltachat_cmping.py  test_15_iroh_discovery.py  test_16_webxdc_realtime.py  test_17_admin_api.py  test_18_stealth_mode.py  test_19_login_validation.py  test_20_exchanger.py  test_21_exchanger_php.py  test_22_mxdeliv_security.py  test_23_bigfile_roundtrip.py
tests/deltachat-test/stress/: pstress.py  test_12_group_stress.py
tests/deltachat-test/utils/: accounts.py  lxc.py  remote_service.py  server_ctl.py  ssh.py
tests/support/: imap_client.rs  mod.rs  p2p.rs
tests/test-client/: go.mod  go.sum  main.go
tests/webimap/: app.js  app_db.js  index.html
(+977 files in other folders)
