[package]
name = "chatmail-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chatmail-config = { workspace = true }
chatmail-types = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
