[package]
name = "chatmail-delivery"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chatmail-db = { workspace = true }
chatmail-pgp = { path = "../chatmail-pgp" }
chatmail-state = { workspace = true }
chatmail-storage = { workspace = true }
chatmail-types = { workspace = true }
once_cell = { workspace = true }
chatmail-config = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "net", "io-util", "time"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
