[package]
name = "chatmail-fed"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
chatmail-db = { workspace = true }
chatmail-pgp = { workspace = true }
chatmail-state = { workspace = true }
chatmail-storage = { workspace = true }
chatmail-types = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "net"] }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
chatmail-db = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
