[package]
name = "chatmail-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
chatmail-types = { workspace = true }
once_cell = { workspace = true }
prometheus = "0.14"
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "net", "time"] }
tower = { workspace = true }
http-body-util = "0.1"
