[package]
name = "chatmail-shadowsocks"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
base64 = "0.22"
chatmail-config = { workspace = true }
chatmail-db = { workspace = true }
chatmail-types = { workspace = true }
percent-encoding = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shadowsocks = { version = "1.24", default-features = false, features = ["aead-cipher"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "process", "sync", "fs"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
