[package]
name = "chatmail-smtp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
chatmail-auth = { path = "../chatmail-auth" }
chatmail-config = { workspace = true }
chatmail-db = { workspace = true }
chatmail-delivery = { path = "../chatmail-delivery" }
chatmail-metrics = { workspace = true }
chatmail-pgp = { path = "../chatmail-pgp" }
chatmail-state = { workspace = true }
chatmail-storage = { workspace = true }
chatmail-types = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "rt", "macros"] }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
chatmail-auth = { workspace = true }
chatmail-db = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util"] }
