[package]
name = "chatmail-state"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chatmail-config = { workspace = true }
chatmail-db = { workspace = true }
chatmail-storage = { workspace = true }
chatmail-types = { workspace = true }
dashmap = "6"
sqlx = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
tracing = { workspace = true }

[dev-dependencies]
chatmail-config = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
