[package]
name = "madmail-tray"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Madmail system tray helper (Windows operator UI)"
publish = false

[[bin]]
name = "madmail-tray"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
chatmail-config = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(windows)'.dependencies]
tray-icon = "0.19"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
open = "5"

[dev-dependencies]
tempfile = "3"
